--- a/ConexionApi/package.json
+++ b/ConexionApi/package.json
@@ -21,7 +21,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
-    "react-native-vector-icons": "9.0.0"
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
