Dependencia instalada Picker

--- a/ConexionApi/package.json
+++ b/ConexionApi/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "6.0.9",
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
@@ -19,6 +20,10 @@
     "react-native": "0.66.4",
     "react-native-gesture-handler": "2.1.0",
     "react-native-ionicons": "^4.6.5",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-textfield": "^0.16.1",
+    "react-native-modal": "^13.0.0",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
     "react-native-vector-icons": "^9.0.0"
